--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "first_app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://atiq-tech.github.io",
+  "homepage": "https://atiq-tech.github.io/TextUtils/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
